Fixed text and alignment in Daily Log and Home Page

--- a/src/resources/css/header.css
+++ b/src/resources/css/header.css
@@ -52,9 +52,9 @@ header nav {
 }
 
 .header__text-box {
-  width: 100%;
+ width: 100%;
   text-align: left;
-  padding-left: 8rem;
+  /*padding-left: 8rem; */
  /*  border: 1px solid #fff;
  background-color: #e6e1e1; */
  
