--- a/src/resources/css/sections.css
+++ b/src/resources/css/sections.css
@@ -15,8 +15,8 @@
 }
 
 .box-app-details {
-  width: 90%;
-  margin-left: 5%;
+  width: 92%;
+  margin-left: 4%;
   margin-top: 5rem;
   margin-bottom: 5rem;
   padding: 5rem;
