--- a/src/resources/css/typography.css
+++ b/src/resources/css/typography.css
@@ -34,7 +34,7 @@
 }
 
 .heading-tertiary {
-  font-size: 2.5rem;
+  font-size: 2.2rem;
   font-weight: 700;
 }
 
